antora/components/relnotes/modules/ROOT/pages/2024/2.1.0/relnotes.adoc
[[r2.1.0]]
= 2.1.0

== DeepLinkServiceWicket

:Notice: Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements. See the NOTICE file distributed with this work for additional information regarding copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at. http://www.apache.org/licenses/LICENSE-2.0 . Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR  CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
:page-partial:


v2.1.0 and v3.1.0 are being released at the same time, and are broadly equivalent.

An implementation of xref:refguide:applib:index/services/linking/DeepLinkService.adoc[DeepLinkService] for Wicket Viewer.

== API

[source,java]
.DeepLinkServiceWicket.java
----
class DeepLinkServiceWicket {
  URI deepLinkFor(Object domainObject)
}
----

include::partial$2024/2.1.0/_relnotes.adoc[]
